--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -421,8 +421,8 @@ cc_binary(
     linkshared = 1,
     deps = [
         "//tensorflow_io/arrow:arrow_ops",
-        #"//tensorflow_io/bigquery:bigquery_ops",
-        #"//tensorflow_io/bigtable:bigtable_ops",
+        "//tensorflow_io/bigquery:bigquery_ops",
+        "//tensorflow_io/bigtable:bigtable_ops",
         "//tensorflow_io/core:audio_ops",
         "//tensorflow_io/core:avro_ops",
         #"//tensorflow_io/core:core_ops",
