[LINKEDIN-AVRO] Adjust build - Remove kafka from build due to gcc compiler incompatible syntax - Fix configure.sh script for passed in python - Add build for centos7
Move avro dataset into core/experimental
- Why? In open source the avro is identified as core reader
- What?
  * Move the avro dataset with tests into core
  * Fix tests

NOTE: Backward breaking change
- Rank has to be defined now for FixedFeatureLen (can be all unknown
  dimensions) This change comes from TF 2.0

RB=1937574
A=

Fixes of avro record dataset op
- Why? The avro record dataset op did not return any strings (or infinite loop)
- What?
  * After debugging found segfault which was caused by calling constructor recursively
  * Had to change some of the reading logic from an avro output stream

Move avro dataset into core/experimental
- Why? In open source the avro is identified as core reader
- What?
  * Move the avro dataset with tests into core
  * Fix tests

NOTE: Backward breaking change
- Rank has to be defined now for FixedFeatureLen (can be all unknown
  dimensions) This change comes from TF 2.0

RB=1937574
BUG=LTSCAI-252
G=tensorflow-reviewers,tony-reviewers
R=lbruns,ashahab,khu,chren
A=ashahab,lbruns

Fix avro parsing into string
- Why? The previous method did not flush the string and did not capture
  the length of the string properly
- What?
  * Changed input/output stream to be created each time
  * Wired-up support for schema resolution
  * Added test cases for schema resolution

RB=1948403
A=

Fix avro parsing into string
- Why? The previous method did not flush the string and did not capture
  the length of the string properly
- What?
  * Changed input/output stream to be created each time
  * Wired-up support for schema resolution
  * Added test cases for schema resolution

RB=1948403
G=tony-reviewers,tensorflow-reviewers
R=khu,lbruns,ashahab,chren
A=ashahab

Adds op for parse avro records given parser keys and tensor types
- Why? This is the second op when splitting
- What?
  *

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -278,13 +278,16 @@ cc_library(
     name = "avro_ops",
     srcs = [
         "kernels/avro_kernels.cc",
+        "kernels/avro_dataset_kernels.cc",
+        "kernels/avro_record_dataset_kernels.cc",
+        "kernels/parse_avro_kernels.cc",
         "ops/avro_ops.cc",
     ],
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
-        "@avro",
+        "//tensorflow_io/core/utils/avro:avro_utils",
     ],
     alwayslink = 1,
 )
