--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -425,21 +425,21 @@ cc_binary(
         "//tensorflow_io/bigtable:bigtable_ops",
         "//tensorflow_io/core:audio_ops",
         "//tensorflow_io/core:avro_ops",
-        #"//tensorflow_io/core:core_ops",
-        #"//tensorflow_io/core:cpuinfo",
-        #"//tensorflow_io/core:file_ops",
-        #"//tensorflow_io/core:genome_ops",
-        #"//tensorflow_io/core:grpc_ops",
-        #"//tensorflow_io/core:hdf5_ops",
-        #"//tensorflow_io/core:image_ops",
-        #"//tensorflow_io/core:json_ops",
-        #"//tensorflow_io/core:kinesis_ops",
-        #"//tensorflow_io/core:lmdb_ops",
-        #"//tensorflow_io/core:parquet_ops",
-        #"//tensorflow_io/core:pcap_ops",
-        #"//tensorflow_io/core:pubsub_ops",
-        #"//tensorflow_io/core:serialization_ops",
-        #"//tensorflow_io/core:text_ops",
+        "//tensorflow_io/core:core_ops",
+        "//tensorflow_io/core:cpuinfo",
+        "//tensorflow_io/core:file_ops",
+        "//tensorflow_io/core:genome_ops",
+        "//tensorflow_io/core:grpc_ops",
+        "//tensorflow_io/core:hdf5_ops",
+        "//tensorflow_io/core:image_ops",
+        "//tensorflow_io/core:json_ops",
+        "//tensorflow_io/core:kinesis_ops",
+        "//tensorflow_io/core:lmdb_ops",
+        "//tensorflow_io/core:parquet_ops",
+        "//tensorflow_io/core:pcap_ops",
+        "//tensorflow_io/core:pubsub_ops",
+        "//tensorflow_io/core:serialization_ops",
+        "//tensorflow_io/core:text_ops",
         "//tensorflow_io/core/azure:azfs_ops",
         "//tensorflow_io/core/oss:oss_ops",
         "//tensorflow_io/gcs:gcs_config_ops",
