Add tutorial for using Azure Blob Storage with TensorFlow (#687)
* Add tutorial for using Azure Blob Storage (emulator) with TensorFlow

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to include usage of TF_AZURE_STORAGE_KEY

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to format string

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update docs, based on review comment feedback

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -18,3 +18,5 @@ toc:
   path: /io/tutorials/bigquery
 - title: "Decode DICOM files for medical imaging"
   path: /io/tutorials/dicom
+- title: "Azure blob storage with TensorFlow"
+  path: /io/tutorials/azure
