Update toolchain and dependencies (#738)
* Update configure.py to capture cuda

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move auditwheel to tools/build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move tensorflow_io.bzl to tools

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update configure.py

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove third_party/tf

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Remove third_party/toolchains

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add gcc7_manylinux2010 and gcc7_manylinux2010-nvcc-cuda10.1 toolchain

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add custom tf and gpu tools

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update path

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update gcc7_manylinux2010

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update gpu setup

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add Windows part to tools/build/tensorflow_io.bzl

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Buildifier

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix incorrect environmental variable

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add build.windows.sh

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Deprecate python 3.4

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix path in Kokoro CPU build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Disable GPU for now.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
           curl -sSOL https://github.com/bazelbuild/bazel/releases/download/${BAZEL_VERSION}/bazel-${BAZEL_VERSION}-installer-${BAZEL_OS}-x86_64.sh
           sudo bash -e bazel-${BAZEL_VERSION}-installer-${BAZEL_OS}-x86_64.sh
           sudo python3 -m pip install $(python3 setup.py --package-version)
-          python3 third_party/tf/configure.py
+          python3 tools/build/configure.py
           bazel build \
             ${BAZEL_OPTIMIZATION} \
             --copt -mmacosx-version-min=10.13 \
@@ -159,7 +159,7 @@ jobs:
           set -x -e
           ls dist/*
           for f in dist/*.whl; do
-            docker run -i --rm -v $PWD:/v -w /v --net=host quay.io/pypa/manylinux2010_x86_64 bash -x -e /v/third_party/tf/auditwheel repair --plat manylinux2010_x86_64 $f
+            docker run -i --rm -v $PWD:/v -w /v --net=host quay.io/pypa/manylinux2010_x86_64 bash -x -e /v/tools/build/auditwheel repair --plat manylinux2010_x86_64 $f
           done
           sudo chown -R $(id -nu):$(id -ng) .
           ls wheelhouse/*
@@ -323,7 +323,7 @@ jobs:
           set -x -e
           ls dist/*
           for f in dist/*.whl; do
-            docker run -i --rm -v $PWD:/v -w /v --net=host quay.io/pypa/manylinux2010_x86_64 bash -x -e /v/third_party/tf/auditwheel repair --plat manylinux2010_x86_64 $f
+            docker run -i --rm -v $PWD:/v -w /v --net=host quay.io/pypa/manylinux2010_x86_64 bash -x -e /v/tools/build/auditwheel repair --plat manylinux2010_x86_64 $f
           done
           sudo chown -R $(id -nu):$(id -ng) .
           ls wheelhouse/*
