--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -3,7 +3,7 @@ licenses(["notice"])  # Apache 2.0
 package(default_visibility = ["//visibility:public"])
 
 load(
-    "//third_party/tf:tensorflow_io.bzl",
+    "//:tools/build/tensorflow_io.bzl",
     "tf_io_copts",
 )
 load("@io_bazel_rules_go//go:def.bzl", "go_binary")
