--- a/tensorflow_io/core/oss/BUILD
+++ b/tensorflow_io/core/oss/BUILD
@@ -5,7 +5,7 @@ package(
 licenses(["notice"])  # Apache 2.0
 
 load(
-    "//third_party/tf:tensorflow_io.bzl",
+    "//:tools/build/tensorflow_io.bzl",
     "tf_io_copts",
 )
 
