Enable LMDB build for Windows (#741)
* Enable Windows Build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust Azurite Setup

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Define read_fastq in Python to avoid direct load

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable LMDB

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add TODO to not remove temp file

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to drop msys2 setup (already in place) in GitHub actions

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add /DNDEBUG to Windows Build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -183,10 +183,91 @@ jobs:
             buildpack-deps:$(echo ${{ matrix.os }} | awk -F- '{print $2}') \
             bash -x -e .github/workflows/build.wheel.sh python${{ matrix.python }}
 
+  windows-bazel:
+    name: Bazel Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.7.6
+      - name: Bazel on Windows
+        env:
+          PYTHON_VERSION: 3.7.6
+          BAZEL_VC: "C:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/"
+        shell: cmd
+        run: |
+          @echo on
+          choco install bazel --version=%BAZEL_VERSION%
+          bazel version
+          cp /c/hostedtoolcache/windows/Python/%PYTHON_VERSION%/x64/python /c/hostedtoolcache/windows/Python/%PYTHON_VERSION%/x64/python3
+          python3 --version
+          python3 -m pip install wheel setuptools
+          python3 -m pip --version
+          python3 setup.py --package-version | xargs python3 -m pip install
+          python3 tools/build/configure.py
+          cat .bazelrc
+          bazel build -s --verbose_failures //tensorflow_io/core:python/ops/libtensorflow_io.so
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{ runner.os }}-bazel-bin
+          path: bazel-bin/tensorflow_io
+
+  windows-wheel:
+    name: Wheel ${{ matrix.python }} Windows
+    needs: windows-bazel
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python: ['3.5', '3.6', '3.7']
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-bazel-bin
+          path: bazel-bin/tensorflow_io
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Wheel ${{ matrix.python }} Windows
+        shell: cmd
+        run: |
+          @echo on
+          python --version
+          python -m pip install -U wheel setuptools
+          python setup.py --data bazel-bin -q bdist_wheel
+          ls -la dist
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-wheel
+          path: dist
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '8.x'
+      - name: Setup ${{ matrix.python }} Windows
+        shell: cmd
+        run: |
+          @echo on
+          bash -x -e tests/test_azure/start_azure.sh
+      - name: Install ${{ matrix.python }} Windows
+        shell: cmd
+        run: |
+          @echo on
+          python --version
+          (cd dist && ls *.whl | xargs python -m pip install)
+      - name: Test ${{ matrix.python }} Windows
+        shell: cmd
+        run: |
+          @echo on
+          python --version
+          python -m pip install -U pytest
+          rm -rf tensorflow_io
+          (cd tests && python -m pytest -s -v test_lmdb_eager.py)
+
   release:
     name: Release
     if: github.event_name == 'push'
-    needs: [lint, linux-wheel, macos-wheel]
+    needs: [lint, linux-wheel, macos-wheel, windows-wheel]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/download-artifact@v1
@@ -213,6 +294,18 @@ jobs:
         with:
           name: Linux-3.7-wheel
           path: Linux-3.7-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.5-wheel
+          path: Windows-3.5-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.6-wheel
+          path: Windows-3.6-wheel
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.7-wheel
+          path: Windows-3.7-wheel
       - run: |
           set -e -x
           mkdir -p wheelhouse
@@ -222,6 +315,9 @@ jobs:
           cp Linux-3.5-wheel/*.whl wheelhouse/
           cp Linux-3.6-wheel/*.whl wheelhouse/
           cp Linux-3.7-wheel/*.whl wheelhouse/
+          cp Windows-3.5-wheel/*.whl wheelhouse/
+          cp Windows-3.6-wheel/*.whl wheelhouse/
+          cp Windows-3.7-wheel/*.whl wheelhouse/
           ls -la wheelhouse/
           sha256sum wheelhouse/*.whl
       - uses: actions/upload-artifact@v1
@@ -332,10 +428,45 @@ jobs:
           name: ${{ runner.os }}-${{ matrix.python }}-nightly
           path: wheelhouse
 
+  windows-nightly:
+    name: Nightly ${{ matrix.python }} Windows
+    if: github.event_name == 'push'
+    needs: [lint, build-number, windows-bazel]
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        python: ['3.5', '3.6', '3.7']
+    steps:
+      - uses: actions/download-artifact@v1
+        with:
+          name: BUILD_NUMBER
+      - uses: einaregilsson/build-number@v2
+      - run: echo "Build number is $BUILD_NUMBER"
+      - uses: actions/checkout@v1
+      - uses: actions/download-artifact@v1
+        with:
+          name: ${{ runner.os }}-bazel-bin
+          path: bazel-bin/tensorflow_io
+      - uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python }}
+      - name: Wheel ${{ matrix.python }} Windows
+        shell: cmd
+        run: |
+          @echo on
+          python --version
+          python -m pip install -U wheel setuptools
+          python setup.py --data bazel-bin -q bdist_wheel --nightly $BUILD_NUMBER
+          ls -la dist
+      - uses: actions/upload-artifact@v1
+        with:
+          name: ${{ runner.os }}-${{ matrix.python }}-nightly
+          path: dist
+
   nightly:
     name: Nightly
     if: github.event_name == 'push'
-    needs: [linux-nightly, macos-nightly]
+    needs: [linux-nightly, macos-nightly, windows-nightly]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/download-artifact@v1
@@ -362,6 +493,18 @@ jobs:
         with:
           name: Linux-3.7-nightly
           path: Linux-3.7-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.5-nightly
+          path: Windows-3.5-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.6-nightly
+          path: Windows-3.6-nightly
+      - uses: actions/download-artifact@v1
+        with:
+          name: Windows-3.7-nightly
+          path: Windows-3.7-nightly
       - run: |
           set -e -x
           mkdir -p dist
@@ -371,6 +514,9 @@ jobs:
           cp Linux-3.5-nightly/*.whl dist/
           cp Linux-3.6-nightly/*.whl dist/
           cp Linux-3.7-nightly/*.whl dist/
+          cp Windows-3.5-nightly/*.whl dist/
+          cp Windows-3.6-nightly/*.whl dist/
+          cp Windows-3.7-nightly/*.whl dist/
           ls -la dist/
           sha256sum dist/*.whl
       - uses: pypa/gh-action-pypi-publish@master
