--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -48,7 +48,6 @@ cc_library(
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
-        "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
@@ -81,6 +80,7 @@ cc_library(
     deps = [
         ":dataset_ops",
         "@curl",
+        "@libarchive",
     ],
     alwayslink = 1,
 )
@@ -426,6 +426,7 @@ cc_library(
     linkstatic = True,
     deps = [
         "//tensorflow_io/core:dataset_ops",
+        "@zlib",
     ],
     alwayslink = 1,
 )
@@ -435,37 +436,41 @@ cc_binary(
     copts = tf_io_copts(),
     linkshared = 1,
     deps = [
-        "//tensorflow_io/arrow:arrow_ops",
-        "//tensorflow_io/bigquery:bigquery_ops",
-        "//tensorflow_io/bigtable:bigtable_ops",
-        "//tensorflow_io/core:audio_ops",
-        "//tensorflow_io/core:avro_ops",
-        "//tensorflow_io/core:core_ops",
-        "//tensorflow_io/core:cpuinfo",
-        "//tensorflow_io/core:file_ops",
-        "//tensorflow_io/core:genome_ops",
-        "//tensorflow_io/core:grpc_ops",
-        "//tensorflow_io/core:hdf5_ops",
-        "//tensorflow_io/core:image_ops",
-        "//tensorflow_io/core:json_ops",
-        "//tensorflow_io/core:kinesis_ops",
         "//tensorflow_io/core:lmdb_ops",
-        "//tensorflow_io/core:numpy_ops",
-        "//tensorflow_io/core:parquet_ops",
-        "//tensorflow_io/core:pcap_ops",
-        "//tensorflow_io/core:pubsub_ops",
-        "//tensorflow_io/core:serialization_ops",
-        "//tensorflow_io/core:text_ops",
-        "//tensorflow_io/core/azure:azfs_ops",
-        "//tensorflow_io/core/oss:oss_ops",
-        "//tensorflow_io/gcs:gcs_config_ops",
-        "//tensorflow_io/ignite:ignite_ops",
-        "//tensorflow_io/kafka:kafka_ops",
-        "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
-        "@xz//:lzma",
-    ],
+    ] + select({
+        "@bazel_tools//src/conditions:windows": [],
+        "//conditions:default": [
+            "//tensorflow_io/arrow:arrow_ops",
+            "//tensorflow_io/bigquery:bigquery_ops",
+            "//tensorflow_io/bigtable:bigtable_ops",
+            "//tensorflow_io/core:audio_ops",
+            "//tensorflow_io/core:avro_ops",
+            "//tensorflow_io/core:core_ops",
+            "//tensorflow_io/core:cpuinfo",
+            "//tensorflow_io/core:file_ops",
+            "//tensorflow_io/core:genome_ops",
+            "//tensorflow_io/core:grpc_ops",
+            "//tensorflow_io/core:hdf5_ops",
+            "//tensorflow_io/core:image_ops",
+            "//tensorflow_io/core:json_ops",
+            "//tensorflow_io/core:kinesis_ops",
+            "//tensorflow_io/core:numpy_ops",
+            "//tensorflow_io/core:parquet_ops",
+            "//tensorflow_io/core:pcap_ops",
+            "//tensorflow_io/core:pubsub_ops",
+            "//tensorflow_io/core:serialization_ops",
+            "//tensorflow_io/core:text_ops",
+            "//tensorflow_io/core/azure:azfs_ops",
+            "//tensorflow_io/core/oss:oss_ops",
+            "//tensorflow_io/gcs:gcs_config_ops",
+            "//tensorflow_io/ignite:ignite_ops",
+            "//tensorflow_io/kafka:kafka_ops",
+            "@libarchive",
+            "@xz//:lzma",
+        ],
+    }),
 )
 
 cc_binary(
