Update WebP library to 1.1.0, and enable Windows build for several image ops (#747)
* Update WebP library to 1.1.0, and enable Windows build for several image ops

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable Windows build for image ops

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

Fix windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add font

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable exif and hdr

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update namespace and lint

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update FreeType to 2.10.1

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix pathname issue on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -263,6 +263,7 @@ jobs:
           python -m pip install -U pytest
           rm -rf tensorflow_io
           (cd tests && python -m pytest -s -v test_lmdb_eager.py)
+          (python -m pytest -s -v test_image_eager.py -k "webp or ppm or bmp or bounding or exif or hdr")
 
   release:
     name: Release
