Update boost to 1.72 and enable boost/avro on Windows (#752)
* Enable boost on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update boost to 1.72

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to enable avro

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update boost to include missing files

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -207,6 +207,7 @@ jobs:
           python3 setup.py --package-version | xargs python3 -m pip install
           python3 tools/build/configure.py
           cat .bazelrc
+          bazel build -s --verbose_failures @avro//:avro
           bazel build -s --verbose_failures //tensorflow_io/core:python/ops/libtensorflow_io.so
       - uses: actions/upload-artifact@v1
         with:
