Update rapidjson/lmdb and enable Windows for serialization ops (#753)
* Update rapidjson to 418331e

Note rapidjson's versioned release is very old (2016),
so use the latest commit instead.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add serialization to the supported ops in Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update LMDB to 0.9.24

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable test_serialization_eager.py on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable Numpy Dataset on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to take dtype for Windows inconsistency

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -261,10 +261,12 @@ jobs:
         run: |
           @echo on
           python --version
-          python -m pip install -U pytest
+          python -m pip install -U pytest-benchmark
           rm -rf tensorflow_io
           (cd tests && python -m pytest -s -v test_lmdb_eager.py)
           (python -m pytest -s -v test_image_eager.py -k "webp or ppm or bmp or bounding or exif or hdr")
+          (python -m pytest -s -v test_serialization_eager.py)
+          (python -m pytest -s -v test_io_dataset_eager.py -k "numpy")
 
   release:
     name: Release
