Enable Kafka ops on Windows (#757)
* Move kafka to tensorflow_io/core

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* clang-format

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move Kafka implementation to deprecated

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update Kafka Dataset to use standarized tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add Avro test for Kafka, and enable Windows build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Add stream KafkaDataset

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to use new implementation

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Properly close resource

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to include avro in Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix Kafka test failures, adds back compat tests

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Decouple kafka from arrow (xxhash dependency) and add Kafka into Windows build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update librdkafka to 1.3.0

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* WIN32_LEAN_AND_MEAN

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Revert back to 0.11.6

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Disable WITH_PLUGINS

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* rm -f src/win32_config.h

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -32,7 +32,6 @@ cc_library(
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
-        "@libarchive",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ],
@@ -435,12 +434,39 @@ cc_library(
     alwayslink = 1,
 )
 
+cc_library(
+    name = "kafka_ops",
+    srcs = [
+        "kernels/kafka_kernels.cc",
+        "kernels/kafka_kernels_deprecated.cc",
+        "ops/kafka_ops.cc",
+        "ops/kafka_ops_deprecated.cc",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "//tensorflow_io/core:dataset_ops",
+        "//tensorflow_io/core:sequence_ops",
+        "@avro",
+        "@com_google_absl//absl/algorithm",
+        "@com_google_absl//absl/container:inlined_vector",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/types:optional",
+        "@com_google_absl//absl/types:span",
+        "@kafka",
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+    ],
+    alwayslink = 1,
+)
+
 cc_binary(
     name = "python/ops/libtensorflow_io.so",
     copts = tf_io_copts(),
     linkshared = 1,
     deps = [
         "//tensorflow_io/core:image_ops",
+        "//tensorflow_io/core:kafka_ops",
         "//tensorflow_io/core:lmdb_ops",
         "//tensorflow_io/core:numpy_ops",
         "//tensorflow_io/core:serialization_ops",
@@ -470,7 +496,6 @@ cc_binary(
             "//tensorflow_io/core/oss:oss_ops",
             "//tensorflow_io/gcs:gcs_config_ops",
             "//tensorflow_io/ignite:ignite_ops",
-            "//tensorflow_io/kafka:kafka_ops",
             "@libarchive",
             "@xz//:lzma",
         ],
