--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -207,8 +207,7 @@ jobs:
           python3 setup.py --package-version | xargs python3 -m pip install
           python3 tools/build/configure.py
           cat .bazelrc
-          bazel build -s --verbose_failures @avro//:avro
-          bazel build -s --verbose_failures @openexr//:openexr
+          bazel build -s --verbose_failures @com_github_azure_azure_storage_cpplite//:azure
           bazel build -s --verbose_failures //tensorflow_io/core:python/ops/libtensorflow_io.so
       - uses: actions/upload-artifact@v1
         with:
