Enable hdf5 ops on Windows, update hdf5 to 1.10.6, and global mutex (#760)
* Update hdf5 to 1.10.6, and consolidate build files

- Update windows build
- Remove SZIP dependency

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable parallel HDF5 Dataset by using global mutex.

This is needed as HDF5 is not multi-threaded anyway
(thread-safe serialize the API calls, but not parallelize).

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Adjust BUILD

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Enable HDF5 tests on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Not delete the tmp file on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -266,7 +266,7 @@ jobs:
           (cd tests && python -m pytest -s -v test_lmdb_eager.py)
           (python -m pytest -s -v test_image_eager.py -k "webp or ppm or bmp or bounding or exif or hdr or openexr")
           (python -m pytest -s -v test_serialization_eager.py)
-          (python -m pytest -s -v test_io_dataset_eager.py -k "numpy")
+          (python -m pytest -s -v test_io_dataset_eager.py -k "numpy or hdf5")
 
   release:
     name: Release
