--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -491,6 +491,22 @@ cc_test(
     ],
 )
 
+cc_library(
+    name = "sql_ops",
+    srcs = [
+        "kernels/sql_kernels.cc",
+        "ops/sql_ops.cc",
+    ],
+    copts = tf_io_copts(),
+    linkstatic = True,
+    deps = [
+        "@local_config_tf//:libtensorflow_framework",
+        "@local_config_tf//:tf_header_lib",
+        "@postgresql",
+    ],
+    alwayslink = 1,
+)
+
 cc_binary(
     name = "python/ops/libtensorflow_io.so",
     copts = tf_io_copts(),
@@ -505,6 +521,7 @@ cc_binary(
         "//tensorflow_io/core:lmdb_ops",
         "//tensorflow_io/core:numpy_ops",
         "//tensorflow_io/core:serialization_ops",
+        "//tensorflow_io/core:sql_ops",
         "@local_config_tf//:libtensorflow_framework",
         "@local_config_tf//:tf_header_lib",
     ] + select({
