Update Arrow to 0.16.0, and enables Windows Build for Arrow (#768)
* Update Arrow to 0.16.0

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update arrow to fit 0.16.0, and enable Windows build

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/arrow/BUILD
+++ b/tensorflow_io/arrow/BUILD
@@ -14,11 +14,17 @@ cc_library(
         "kernels/arrow_kernels.cc",
         "kernels/arrow_kernels.h",
         "kernels/arrow_stream_client.h",
-        "kernels/arrow_stream_client_unix.cc",
         "kernels/arrow_util.cc",
         "kernels/arrow_util.h",
         "ops/dataset_ops.cc",
-    ],
+    ] + select({
+        "@bazel_tools//src/conditions:windows": [
+            "kernels/arrow_stream_client_windows.cc",
+        ],
+        "//conditions:default": [
+            "kernels/arrow_stream_client_unix.cc",
+        ],
+    }),
     copts = tf_io_copts(),
     linkstatic = True,
     deps = [
