Add tfio.genome tutorial (#775)
* Initial Genome tutorial

* Update _toc.yaml

* Updates

* Update genome tutorial

* Update genome tutorial

* Link fixes + print shapes.

* Update docs/tutorials/genome.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Address reviewer comments

* Update genome.ipynb

* Update genome.ipynb

Co-authored-by: Mark Daoust <markdaoust@google.com>
Co-authored-by: Billy Lamberta <blamb@google.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -20,3 +20,5 @@ toc:
   path: /io/tutorials/dicom
 - title: "Azure blob storage with TensorFlow"
   path: /io/tutorials/azure
+- title: "Genomics IO"
+  path: /io/tutorials/genome
