Add a tutorial to load metrics from prometheus server (#774)
* Add a tutorial to load metrics from prometheus server

This PR adds tutorial to load metrics from prometheus server
into tf.data.Dataset, so that it could be used for tf.keras
and model training.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* sudo apt-get

+ sudo apt
+ split dig commands.

* Update docs/tutorials/prometheus.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Update docs/tutorials/prometheus.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Update docs/tutorials/prometheus.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Update docs/tutorials/prometheus.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Update docs/tutorials/prometheus.ipynb

Co-Authored-By: Billy Lamberta <blamb@google.com>

* Add sudo apt-get warning.

* set private_outputs

* Fix extra comma (`,`)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Fix typo

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move all imports into one block, as was suggested in review comment, also split shell and python block

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Move the server setup in early section to avoid `Unreachable` failure (server may take a second or two to start up)

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

Co-authored-by: Mark Daoust <markdaoust@google.com>
Co-authored-by: Billy Lamberta <blamb@google.com>

--- a/docs/tutorials/_toc.yaml
+++ b/docs/tutorials/_toc.yaml
@@ -20,5 +20,7 @@ toc:
   path: /io/tutorials/dicom
 - title: "Azure blob storage with TensorFlow"
   path: /io/tutorials/azure
+- title: "Prometheus metrics"
+  path: /io/tutorials/prometheus
 - title: "Genomics IO"
   path: /io/tutorials/genome
