Add additional patch on grpc to allow using python3 only (#789)
* Add additional patch on grpc to allow using python3 only

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update README.md to only install python3, and add sudo

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to include CentoS 8

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update macOS section

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update to add python-devel

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,9 +34,21 @@ jobs:
       - uses: actions/checkout@v1
       - run: |
           set -x -e
-          python3 .github/workflows/build.develop.py README.md "##### Ubuntu 18.04" > source.sh
+          python3 .github/workflows/build.instruction.py README.md "##### Ubuntu 18.04" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host ubuntu:18.04 \
+            bash -x -e source.sh
+
+  centos-8:
+    name: CentOS 8
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - run: |
+          set -x -e
+          python3 .github/workflows/build.instruction.py README.md "##### CentOS 8" > source.sh
+          cat source.sh
+          docker run -i --rm -v $PWD:/v -w /v --net=host centos:8 \
             bash -x -e source.sh
 
   centos-7:
@@ -46,7 +58,7 @@ jobs:
       - uses: actions/checkout@v1
       - run: |
           set -x -e
-          python3 .github/workflows/build.develop.py README.md "##### CentOS 7" > source.sh
+          python3 .github/workflows/build.instruction.py README.md "##### CentOS 7" > source.sh
           cat source.sh
           docker run -i --rm -v $PWD:/v -w /v --net=host centos:7 \
             bash -x -e source.sh
