Add MP3 support (with minimp3) for Audio Dataset and IOTensor (#801)
* Add MP3 support (with minimp3) for Audio Dataset and IOTensor

This PR adds MP3 support (with minimp3) for Audio Dataset and IOTensor.
The difference between this PR and FFmpeg is that FFmpeg is only supported
on specific Ubuntu 16.04 and 18.04, though external .so.
This PR builds minimp3 as part of the program and support Windows/Linux/macOS.

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

* Update minimp3 to carry patch on Windows

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -196,6 +196,7 @@ cc_library(
     deps = [
         "//tensorflow_io/core:dataset_ops",
         "@flac",
+        "@minimp3",
         "@vorbis",
     ],
     alwayslink = 1,
