Add Audio resample support (#803)
This PR adds audio resample support (backed by `speex`),
exposed in `tfio.experimental.audio.resample`.
With resample, it is possible to resample the audio by providing
`tfio.experimental.audio.resample(input, rate_in, rate_out, quality)`

Note input has to be 2-D `[samples, channels]`. The `quality` is the quality
`1-10` as was defined in `speex`.

This PR fixes 582

Signed-off-by: Yong Tang <yong.tang.github@outlook.com>

--- a/tensorflow_io/core/BUILD
+++ b/tensorflow_io/core/BUILD
@@ -197,6 +197,7 @@ cc_library(
         "//tensorflow_io/core:dataset_ops",
         "@flac",
         "@minimp3",
+        "@speexdsp",
         "@vorbis",
     ],
     alwayslink = 1,
